# disp-report-card

./: .gitignore  Makefile  PLAN.md  README.md  pyproject.toml
prd/: display-extended-tests.prd  display-report-card.prd
src/: display_report_card.py
test-data/12-3-nq1v1/: summary.json
test-data/12-3-nq1v1/artifacts/: brightness-calibration-81step.csv  brightness-calibration-81step.json  gamma_curve_test-gamma-curve.csv  gamma_curve_test-gamma-curve_inverse_lut.csv  local-dimming-apl-sweep.csv  local-dimming-apl-sweep.json
test-data/12-3-nq1v1/raw/: test-983disppower-readwrite.json  test-983i2cdbglog-readwrite.json  test-983reinit.json  test-983version-read.json  test-als-readout.json  test-bltemp-read.json  test-brightness-calibration.json  test-brightness-linearity.json  test-brightness-write.json  test-color-gamut.json  test-contrast-sequential.json  test-disppower-readwrite.json  test-fpgaid-read.json  test-gamma-curve.json  test-i2c-flood.json  test-ioc-i2c-flood.json  test-iocversion-read.json  test-local-dimming-apl.json  test-pattern-bist.json  test-rtq6749-status.json  test-tpreset-readwrite.json  test-version-read.json
test-data/15-6-0od/: summary.json
test-data/15-6-0od/artifacts/: brightness-calibration-81step.csv  brightness-calibration-81step.json  brightness-nits-verify.csv  brightness-nits-verify.json  gamma_curve_test-gamma-curve.csv  gamma_curve_test-gamma-curve_inverse_lut.csv  local-dimming-apl-sweep.csv  local-dimming-apl-sweep.json
test-data/15-6-0od/raw/: test-983disppower-readwrite.json  (+23 more)
tests/: test_display_report_card.py
